feat: promo in checkout page

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 @import 'base';
-@import 'flex';
+@import 'tailwind';
 @import 'nprogress';
 @import 'tooltips';
 @import 'scrollbar';
